<resources>
    <string name="app_name">My Work App</string>


    <string name="get_location_permission">Get location permission</string>
    <string name="title_activity_uhfmain">UHF</string>
    <string name="close">Close</string>
    <string name="ok">Ok</string>
    <string name="select_device">Select a device</string>
    <string name="ble_disconnect">Disconnect Bluetooth Device</string>
    <string name="ble_not_supported">Bluetooth not Supported</string>
    <string name="history_connected_device">Connected</string>
    <string name="no_history">No Data Found</string>
    <string name="none_found">Not found</string>
    <string name="none_paired">No Matching</string>
    <string name="btInventory">Start</string>
    <string name="button_scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning…</string>
    <string name="paired">paired</string>
    <string name="bn_inv">Inventory</string>
    <string name="bn_settings">Settings</string>
    <string name="tips_disconnect_the_ble">Do you want to disconnect bluetooth connected device?</string>
    <string name="tips_open_the_ocation_permission">Do you enter the settings interface to open the location permission?</string>
    <string name="search_tag">Search Tag</string>
    <string name="title_stop_Inventory">Stop</string>
    <string name="title_stop_read_card">Please stop reading cards!</string>
    <string name="uhf_msg_inventory_open_fail">Inventory Open Fails</string>
    <string name="uhf_msg_inventory_stop_fail">Inventory Close Fails</string>
    <string name="search_inv">Search Inventory</string>
    <string name="search_menu_title">Search</string>
    <string name="shipping"> Shipping</string>
    <string name="receiving">Receiving</string>
    <string name="orders">Orders</string>
    <string name="bill_of_lading">Bill of Lading</string>
    <string name="inventory">Inventory</string>
    <string name="settings">Settings</string>
    <string name="inspection_process">Inspection Process</string>
    <string name="begin_scanning">Begin Scanning</string>
    <string name="prepare_shipment">Prepare Shipment</string>
    <string name="receive_shipment">Receive Shipment</string>
    <string name="order_search">Order Search</string>
    <string name="carrier">Carrier</string>
    <string name="customer">Customer</string>
    <string name="bill_of_lading_">#BOL</string>
    <string name="order">Order</string>
    <string name="search">Search</string>
    <string name="device_counter">Devices Found: %d</string>
    <string name="search_ellipse">Search...</string>
    <string name="view_order_details">View order details</string>
    <string name="create_bol">Create BOL</string>
    <string name="lookup_bol">Lookup BOL</string>
    <string name="inspect_items_at_any_stage_of_the_processes_mark_their_service_ability_condition_assign_next_actions_for_item">Inspect items at any stage of the processes mark their service ability condition assign next actions for item.</string>
    <string name="create_bill_of_lading_for_new_shipment">Create Bill of Lading for new shipment.</string>
    <string name="item_name_type">Item Name - Type</string>
    <string name="qty">Qty</string>
    <string name="inspection">Inspection</string>
    <string name="cycle_count">Cycle Count</string>
    <string name="tag_finder">Tag Finder</string>
    <string name="inspect_items_at_any_stage_of_the_processes_mark_their_serviceability_condition_assign_next_actions_for_item">Inspect items at any stage of the processes, mark their serviceability condition, assign next actions for item.</string>
    <string name="device_settings">Device Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="about_application">About</string>
    <string name="no_customer_found">Oops! Customer not found</string>
    <string name="no_order_found">Oops! Order not found</string>
    <string name="no_carrier_found">Oops! Carrier not found</string>
    <string name="myworkapp_io">MyWorkApp.io</string>
    <string name="action_not_supported">Document downloaded. Unable to open the same due to unsupported file type.</string>
    <string name="scan_count">Scan count</string>
    <string name="save_items">Save Items</string>

</resources>