<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.PrepareShipmentActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/app_color"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back_24"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/ToolbarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:textColor="@color/white"
            tools:text="@string/prepare_shipment" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/order"
            android:textAllCaps="true"
            android:textColor="@drawable/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/customer"
            android:textAllCaps="true"
            android:textColor="@drawable/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/radio_selector"
            android:button="@android:color/transparent"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/carrier"
            android:textAllCaps="true"
            android:textColor="@drawable/text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RadioGroup>

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/search_edittext_border"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/search"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvOrders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_weight="1"
        tools:itemCount="2"
        tools:listitem="@layout/item_order" />

    <Button
        android:id="@+id/orderDetailsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="ORDER DETAILS"
        android:textColor="@drawable/button_text_color"
        android:padding="@dimen/_12sdp"
        android:layout_margin="@dimen/_12sdp"
        android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>