<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <FrameLayout
        android:id="@+id/frameToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frameToolbar"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_64sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/bg_circle"
                android:elevation="1dp"
                android:importantForAccessibility="no"
                android:scaleType="centerInside"
                android:src="@drawable/ic_files" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/orders"
                    android:textAppearance="@style/inter_400_18_12"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/billOfLading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_64sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/bg_circle"
                android:elevation="1dp"
                android:importantForAccessibility="no"
                android:scaleType="centerInside"
                android:src="@drawable/ic_bill_of_lading" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center_vertical"
                    android:text="@string/bill_of_lading"
                    android:textAppearance="@style/inter_400_18_12"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconImage"
                android:layout_width="@dimen/_96sdp"
                android:layout_height="@dimen/_96sdp"
                android:background="@drawable/bg_circle"
                android:elevation="1dp"
                android:fontFamily="@font/inter_medium"
                android:importantForAccessibility="no"
                android:scaleType="centerInside"
                android:src="@drawable/ic_begin_scanning" />

            <LinearLayout
                android:id="@+id/shippingReceiving"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="-60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingEnd="@dimen/_25sdp"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/shipping"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:background="@drawable/bg_top_curve_right_outlined"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="center"
                        android:text="@string/shipping"
                        android:textAppearance="@style/inter_400_16_12"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:id="@+id/receiving"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_48sdp"
                    android:background="@drawable/bg_bottom_curve_right_outlined"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:gravity="center"
                        android:layout_marginStart="@dimen/_6sdp"
                        android:text="@string/receiving"
                        android:textAppearance="@style/inter_400_16_12"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/beginScanning"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible"
                tools:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="12dp"
                    android:gravity="center_vertical"
                    android:text="@string/begin_scanning"
                    android:textAppearance="@style/inter_400_18_12"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/inventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_64sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/bg_circle"
                android:elevation="1dp"
                android:importantForAccessibility="no"
                android:padding="@dimen/_18sdp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_inventory" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center_vertical"
                    android:text="@string/inventory"
                    android:textAppearance="@style/inter_400_18_12"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_64sdp"
                android:layout_height="@dimen/_64sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/bg_circle"
                android:elevation="1dp"
                android:importantForAccessibility="no"
                android:scaleType="centerInside"
                android:src="@drawable/ic_settings" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="center_vertical"
                    android:text="@string/settings"
                    android:textAppearance="@style/inter_400_18_12"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>