<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.OrderDetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/app_color"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back_24"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/ToolbarTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="Bill of Lading"
            android:textColor="@color/white" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/createBol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/bg_filled_outlined"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_16ssp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imgCreateBol"
                android:layout_width="@dimen/_72sdp"
                android:layout_height="@dimen/_72sdp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/bg_circle"
                android:elevation="1dp"
                android:importantForAccessibility="no"
                android:scaleType="centerInside"
                android:src="@drawable/ic_files" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imgCreateBol"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/inter_bold"
                    android:letterSpacing="-0.01"
                    android:text="@string/create_bol"
                    android:textAppearance="@style/inter_700_14_12"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:text="@string/create_bill_of_lading_for_new_shipment"
                    android:textAppearance="@style/inter_400_12_16"
                    android:textColor="@color/color_909090" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lookupBol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:background="@drawable/bg_filled_outlined"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginVertical="@dimen/_16ssp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imgLookupBol"
                android:layout_width="@dimen/_72sdp"
                android:layout_height="@dimen/_72sdp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@drawable/bg_circle"
                android:elevation="1dp"
                android:importantForAccessibility="no"
                android:scaleType="centerInside"
                android:src="@drawable/ic_files" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/imgLookupBol"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/inter_bold"
                    android:letterSpacing="-0.01"
                    android:text="@string/lookup_bol"
                    android:textAppearance="@style/inter_700_14_12"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:text="@string/inspect_items_at_any_stage_of_the_processes_mark_their_service_ability_condition_assign_next_actions_for_item"
                    android:textAppearance="@style/inter_400_12_16"
                    android:textColor="@color/color_909090" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>